# cpp-game-test

./: .gitignore  CMakeLists.txt
docs/: 2d-platformer-physics.md  aabb-physics.md
res/: attribution.md  cube.mtl  map.csv  map2.csv  map3.csv  phong.frag  phong.vert
src/: animation.cpp  animation.hpp  boundary.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  main.cpp  physics.cpp  physics.hpp  player.cpp  player.hpp  rect.cpp  resource.hpp  sprite.cpp  sprite.hpp  tile.cpp  tile.hpp  tile_index.cpp  tile_index.hpp  tileset.cpp  tileset.hpp  velocity.hpp  video.hpp  viewport.hpp  world.cpp  world.hpp
src/2dtest/: animation.cpp  animation.hpp  boundary.cpp  boundary.hpp  game.cpp  main.cpp  physics.hpp  rect.hpp  resource.hpp  sprite.hpp  tile.cpp  tile_index.hpp  transform.hpp
src/3dtest/: entity.cpp  entity.hpp  geometry.cpp  geometry.hpp  main.cpp  material.cpp  material.hpp  render.hpp  test.cpp  test.hpp  world.cpp  world.hpp
test/: entity.cpp  game.cpp  world.cpp
